--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Hongjae"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
+  bio              : 
   location         : "Republic of Korea"
   email            :
   links:
